[gd_scene load_steps=3 format=3 uid="uid://bsflbiwg1kyop"]

[ext_resource type="Script" uid="uid://dbemlq82iy2m1" path="res://level_components/save_point/save_point.gd" id="1_dexyo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ggsr"]
size = Vector2(32, 32)

[node name="SavePoint" type="Area2D"]
script = ExtResource("1_dexyo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0ggsr")

[node name="SpawnPoint" type="Marker2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
